# hanfun

./: .cproject  .gitattributes  .gitignore  CMakeLists.txt  Changelog  FAQ.md  FAQ_8md_source.html  LICENSE  README.md  README_8md_source.html  RELEASE_NOTES.md  RELEASE__NOTES_8md_source.html  alert_8h.html  alert_8h.js  alert_8h__dep__incl.map  alert_8h__dep__incl.md5  alert_8h__incl.map  alert_8h__incl.md5  alert_8h_source.html  annotated.html  annotated.js  annotated_dup.js  application_8h.html  application_8h.js  application_8h__dep__incl.map  application_8h__dep__incl.md5  application_8h__incl.map  application_8h__incl.md5  application_8h_source.html  apps_2common_8h.html  apps_2common_8h.js  apps_2common_8h__dep__incl.map  apps_2common_8h__dep__incl.md5  apps_2common_8h__incl.map  apps_2common_8h__incl.md5  apps_2common_8h_source.html  apps_2transport_8h.html  apps_2transport_8h__dep__incl.map  apps_2transport_8h__dep__incl.md5  apps_2transport_8h__incl.map  (+4041 more)
apps/: CMakeLists.txt  application.h  base.cpp  base.h  base_app.cpp  common.cpp  common.h  example_01.cpp  example_02.cpp  example_03.cpp  example_04.cpp  example_05.cpp  example_06.cpp  example_07.cpp  example_08.cpp  hanfun.cpp  jsoncpp.cpp  localloop.h  main.cpp  node.cpp  node.h  node_app.cpp  transport.cpp  transport.h
cmake/: FindBacktrace.cmake  code_coverage.cmake  compiler.cmake  eastl.cmake  options.cmake  package.cmake
doc/: 00_license.md  01_overview.md  API.doxyfile  API.doxyfile.in  CMakeLists.txt  Developer.doxyfile
inc/: hanfun.h
inc/hanfun/: attributes.h  common.h  config.h  core.h  debug.h  device.h  devices.h  gcc.h  interface.h  profiles.h  protocol.h  transport.h  uids.h  ule.h  units.h  version.h
inc/hanfun/core/: attribute_reporting.h  batch_program_management.h  bind_management.h  device_information.h  device_management.h  event_scheduling.h  group_management.h  group_table.h  rssi.h  scheduling.h  session_management.h  suota.h  time.h  weekly_scheduling.h
inc/hanfun/interfaces/: alert.h  colour_control.h  level_control.h  on_off.h  simple_air_pressure.h  simple_button.h  simple_humidity.h  simple_keypad.h  simple_light_sensor.h  simple_power_meter.h  simple_temperature.h  simple_thermostat.h  simple_visual_effects.h
scripts/: formatCode.sh  make_release.sh  uncrustify.cfg
src/: CMakeLists.txt  attributes.cpp  common.cpp  core.cpp  debug.cpp  devices.cpp  interfaces.cpp  profiles.cpp  protocol.cpp  uids.cpp  units.cpp
src/core/: attribute_reporting.cpp  attribute_reporting_client.cpp  attribute_reporting_server.cpp  batch_program_management.cpp  batch_program_management_client.cpp  batch_program_management_server.cpp  bind_management.cpp  bind_management_client.cpp  bind_management_server.cpp  device_information.cpp  device_management.cpp  device_management_client.cpp  device_management_server.cpp  event_scheduling.cpp  event_scheduling_client.cpp  event_scheduling_server.cpp  group_management.cpp  group_management_client.cpp  group_management_server.cpp  group_table.cpp  group_table_client.cpp  group_table_server.cpp  rssi.cpp  rssi_client.cpp  rssi_server.cpp  scheduling.cpp  scheduling_client.cpp  scheduling_server.cpp  session_management_client.cpp  session_management_server.cpp  suota.cpp  suota_client.cpp  suota_server.cpp  time.cpp  time_client.cpp  time_server.cpp  weekly_scheduling.cpp  weekly_scheduling_client.cpp  weekly_scheduling_server.cpp
src/interfaces/: alert.cpp  alert_client.cpp  alert_server.cpp  colour_control.cpp  colour_control_client.cpp  colour_control_server.cpp  level_control.cpp  level_control_client.cpp  level_control_server.cpp  on_off.cpp  on_off_client.cpp  on_off_server.cpp  simple_air_pressure.cpp  simple_air_pressure_client.cpp  simple_air_pressure_server.cpp  simple_button.cpp  simple_button_client.cpp  simple_button_server.cpp  simple_humidity_client.cpp  simple_humidity_server.cpp  simple_keypad.cpp  simple_keypad_client.cpp  simple_keypad_server.cpp  simple_light_sensor.cpp  simple_light_sensor_client.cpp  simple_light_sensor_server.cpp  simple_power_meter.cpp  simple_power_meter_client.cpp  simple_power_meter_server.cpp  simple_temperature_client.cpp  simple_temperature_server.cpp  simple_thermostat.cpp  simple_thermostat_client.cpp  simple_thermostat_server.cpp  simple_visual_effects.cpp  simple_visual_effects_client.cpp  simple_visual_effects_server.cpp
tests/: CMakeLists.txt  config.h.in  test_common.cpp  test_core.cpp  test_devices.cpp  test_helper.cpp  test_helper.h  test_interfaces.cpp  test_profiles.cpp  test_protocol.cpp  test_transport.cpp  test_units.cpp
tests/core/: test_attribute_reporting.cpp  test_batch_program_management.cpp  test_bind_management.cpp  test_device_information.cpp  test_device_management.cpp  test_event_scheduling.cpp  test_group_management.cpp  test_group_table.cpp  test_rssi.cpp  test_scheduling.cpp  test_session_management.cpp  test_suota.cpp  test_time.cpp  test_weekly_scheduling.cpp
tests/helpers/: assert.cpp  assert.h  memory.h
tests/interfaces/: test_alert.cpp  test_colour_control.cpp  test_level_control.cpp  test_on_off.cpp  test_simple_air_pressure.cpp  test_simple_button.cpp  test_simple_humidity.cpp  test_simple_keypad.cpp  test_simple_light_sensor.cpp  test_simple_power_meter.cpp  test_simple_temperature.cpp  test_simple_thermostat.cpp  test_simple_visual_effects.cpp
tools/: hanfun.rb
tools/hanfun/: README.md  hanfun.gemspec
tools/hanfun/exe/: hanfun
tools/hanfun/interface/: client.cpp.erb  common.cpp.erb  header.h.erb  server.cpp.erb  test.cpp.erb
tools/hanfun/lib/: extended.rb  hanfun.rb
tools/hanfun/lib/hanfun/: extended.rb  helpers.rb  version.rb
tools/hanfun/lib/hanfun/generators/: abstract.rb  core.rb  interface.rb
tools/hanfun/spec/: hanfun_spec.rb  spec_helper.rb
tools/hanfun/templates/: client.cpp.erb  common.cpp.erb  debug.cpp.erb  header.h.erb  scaffold.yml  server.cpp.erb  test.cpp.erb  test_interface.cpp.erb  test_service.cpp.erb
